Link main layout to component

--- a/resources/views/customers/index.edge
+++ b/resources/views/customers/index.edge
@@ -1,3 +1,6 @@
+@layout('main')
+
+@section('content')
 
 <div>
   <table class="table">
@@ -29,3 +32,5 @@
     </tbody>
   </table>  
 </div>
+
+@endsection
