--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -9,10 +9,13 @@
   <title>Greenmsoft Customer Management</title>
 </head>
 <body>
+  @include('inc/navbar')
   <div class="container">
     @!section('content')
   </div>
   
   {{ script('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js') }}
+  {{ script('https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js') }}
+  {{ script('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js') }}
 </body>
 </html>
