--- a/resources/views/posts/index.edge
+++ b/resources/views/posts/index.edge
@@ -2,6 +2,5 @@
 <h4>{{ title }}</h4>
 
 @each(post in posts)
-  {{--  <li>{{ post.title }}  --}}
-    <table>
+  <li>{{ post.title }} - {{ post.body }}
 @endeach
