--- a/resources/views/posts/index.edge
+++ b/resources/views/posts/index.edge
@@ -1,6 +1,11 @@
-<h1>Posts</h1>
-<h4>{{ title }}</h4>
+@layout('main')
+@section('content')
 
-@each(post in posts)
-  <li>{{ post.title }} - {{ post.body }}
-@endeach
+<h1>{{ title }}</h1>
+<ul class="list-grou">
+  @each(post in posts)
+    <li class='list-group-item'><a href='/posts/{{ post.id }}'> {{ post.title }}</a> - {{ post.body }}</li>
+  @endeach
+</ul>
+
+@endsection
