Include form to add new customers

--- a/resources/views/inc/navbar.edge
+++ b/resources/views/inc/navbar.edge
@@ -12,6 +12,12 @@
         <li class="nav-item">
           <a href="/customers" class="nav-link">Customers</a>
         </li>
+        <li class="nav-item">
+          <a href="/customers/add" class="nav-link">Add Customers</a>
+        </li>
+        <li class="nav-item">
+          <a href="/posts/add" class="nav-link">Add Post</a>
+        </li>
       </ul>
     </div>
   </div>
