Added link to properies

--- a/resources/views/inc/navbar.edge
+++ b/resources/views/inc/navbar.edge
@@ -18,6 +18,9 @@
         <li class="nav-item">
           <a href="/posts/add" class="nav-link">Add Post</a>
         </li>
+        <li class="nav-item">
+          <a href="/properties/new" class="nav-link">Add Property</a>
+        </li>
       </ul>
     </div>
   </div>
