--- a/resources/views/inc/navbar.edge
+++ b/resources/views/inc/navbar.edge
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary navbar-dark navbar-right mb-3">
+<nav class="navbar navbar-expand-lg bg-secondary navbar-dark navbar-right mb-3">
   <div class="container">
     <a href="#" class="navbar-brand">GREEMSOFT</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
