--- a/resources/views/inc/navbar.edge
+++ b/resources/views/inc/navbar.edge
@@ -1,16 +1,19 @@
 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark navbar-right mb-3">
   <div class="container">
-    <a href="#" class="navbar-brand">GREEMSOFT</a>
+      <a href="/" class="navbar-brand">GREEMSOFT</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="/" class="nav-link">Home</a>
+          <a href="/customers" class="nav-link">Customers</a>
         </li>
         <li class="nav-item">
-          <a href="/customers" class="nav-link">Customers</a>
+          <a href="/posts" class="nav-link">Posts</a>
+        </li>
+        <li class="nav-item">
+          <a href="/properties" class="nav-link">Properties</a>
         </li>
         <li class="nav-item">
           <a href="/customers/add" class="nav-link">Add Customers</a>
