--- a/resources/views/posts/add.edge
+++ b/resources/views/posts/add.edge
@@ -5,7 +5,7 @@
   <a href='/posts'>Go Back</a>
   <hr>
   <h1>Add Post</h1>
-  <form action="/post" method="POST">
+  <form action="/posts" method="POST">
     {{ csrfField() }}
     <div class="form-group">
       <label>Title</label>
