--- a/resources/views/posts/add.edge
+++ b/resources/views/posts/add.edge
@@ -9,12 +9,14 @@
     {{ csrfField() }}
     <div class="form-group">
       <label>Title</label>
-      <input name="title" class="form-control" placeholder="Title"></input>
+      <input name="title" class="form-control" placeholder="Title" value="{{ old('title', '') }}">
+      {{ elIf('<span class="text-danger">$self</span>', getErrorFor('title'), hasErrorFor('title')) }}
     </div>
     <br>
     <div class="form-group">
       <label>Body</label>
-      <textarea name="body" class="form-control" placeholder="Body"></textarea>
+      <textarea name="body" class="form-control" placeholder="Body" value="{{ old('body', '') }}"></textarea>
+      {{ elIf('<span class="text-danger">$self</span>', getErrorFor('body'), hasErrorFor('body')) }}
     </div>
     <br>
     <button type="submit" class="btn btn-primary">Submit</button>
