--- a/resources/views/posts/index.edge
+++ b/resources/views/posts/index.edge
@@ -3,7 +3,7 @@
 
 <h1>{{ title }}</h1>
 @if(old('notification'))
-  <div class="alert alert-danger">
+  <div class="alert alert-success">
     {{ old('notification')}}
   </div>
 @endif
