--- a/resources/views/properties/new.edge
+++ b/resources/views/properties/new.edge
@@ -5,28 +5,28 @@
   <a href='/posts'>Go Back</a>
   <hr>
   <h1>New Property</h1>
-  <form action="/post" method="POST">
+  <form action="/properties" method="POST">
     {{ csrfField() }}
     <div class="form-group">
       <label>Name</label>
-      <input name="name" class="form-control" placeholder="Property Name"></input>
+      <input name="name" class="form-control" placeholder="Property Name" />
     </div>
     <br>
     <div class="form-group">
       <label>Value</label>
-      <textarea name="value" class="form-control" placeholder="Value"></textarea>
+      <input name="value" class="form-control" placeholder="Value" />
     </div>
     <div class="form-group">
       <label>Tenants</label>
-      <textarea name="tenants" class="form-control" placeholder="Tenants"></textarea>
+      <input name="tenants" class="form-control" placeholder="Tenants" />
     </div>
     <div class="form-group">
       <label>Rent</label>
-      <textarea name="rent" class="form-control" placeholder="Rent"></textarea>
+      <input name="rent" class="form-control" placeholder="Rent" />
     </div>
     <div class="form-group">
       <label>Added</label>
-      <textarea name="added" class="form-control" placeholder="Added"></textarea>
+      <input name="added" class="form-control" placeholder="Added" />
     </div>
     <br>
     <button type="submit" class="btn btn-primary">Submit</button>
