Alter image field

--- a/resources/views/properties/new.edge
+++ b/resources/views/properties/new.edge
@@ -24,9 +24,10 @@
       <label>Rent</label>
       <input name="rent" class="form-control" placeholder="Rent" />
     </div>
+    {{--  Temporary, Comment Out  --}}
     <div class="form-group">
-      <label>Added</label>
-      <input name="added" class="form-control" placeholder="Added" />
+      <label>Image</label>
+      <input name="image" class="form-control" placeholder="Image" />
     </div>
     <br>
     <button type="submit" class="btn btn-primary">Submit</button>
