Created logout functionality

--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -3,6 +3,6 @@
 @section('content')
 
 <h1>Home</h1>
-<p>Welcome to Greemsoft Management Software</p>
+<p>Welcome <strong>{{ auth.user.username }}</strong> to Greemsoft Management Software</p>
 
 @endsection
