Forgot password link on login

--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -39,6 +39,10 @@
         <br>
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
+
+      <p>
+        <a href='/password/reset'>Forgot password?</a>
+      </p>
     <div>
 
   </div>
